# coding-tutorial-screen-shoter

./: .gitignore  README.md  dev.sh
backend/: pyproject.toml
backend/app/: database.py  main.py  tts.py
backend/app/models/: recording.py  screenshot.py
backend/app/routers/: images.py  recordings.py  screenshots.py
backend/app/schemas/: recording.py  screenshot.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CanvasEditor.tsx  CodeEditor.tsx  CreateRecordingModal.tsx  DurationPopover.tsx  EditorModeSwitcher.tsx  EditorToolbar.tsx  Header.tsx  LandingPage.tsx  MarkdownEditor.tsx  RecordingEditor.tsx  RecordingsList.tsx  ScreenshotCard.tsx  ScreenshotPanel.tsx  SlidePreviewModal.tsx
frontend/src/hooks/: useRecordings.ts  useScreenshotCapture.ts  useScreenshots.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: videoExport.ts  zipExport.ts
